# Education

./: .gitignore  README.md
01_module/: CMakeLists.txt  main.cpp
02_module/: main.cpp
03_module/3.1/: CMakeLists.txt  main.cpp
03_module/3.2/: main.cpp
03_module/3.2_module/: main.cpp
03_module/3.3/: CMakeLists.txt
03_module/3.4/: main.cpp
03_module/3.5/: main.cpp
2_module/: main.cpp
3_module/: CMakeLists.txt  main.cpp
Books/: NNMClub_to_Irina_SHipilova_Angliyskiy_ot_A_do_YA_2018.torrent  NNMClub_to_OTUS_Algoritmyi_dlya_razrabotchikov_2020.torrent  NNMClub_to_SkillUP_Evgeniy_Makarenko_Vvodnyiy_kurs_Testirovshchik.torrent  NNMClub_to_Udemy_Java_kurs_c_nulya_i_do_pervoi&#774;_rabotyi_Polnyii&#774;.torrent  NNMClub_to_Udemy_Polnyiy_kurs_po_JavaScript_+_React_s_nulya_do_rezul'tata.torrent  [NNMClub.to]_[Geekbrains] Testirovshchik PO (2019).torrent  [NNMClub.to]_[Skillbox] Java-razrabotchik (2020).torrent  Библиотека_программиста_от_Digrol_а,_v2_2020_08_01_Java,_C++,_C#.torrent
C++/: Install_compiler_toolchain.txt
C++/16_module/16.05/: CMakeLists.txt  main.cpp
C++/17_module/17.09/: CMakeLists.txt  main.cpp
C++/17_module/17.09/src/: Battleships.cpp  Battleships.h  BattleshipsAdd.cpp  BattleshipsAdd.h  BattleshipsLocation.h
C++/SFML/Example_01/: CMakeLists.txt
Emacs_config/: .emacs  README.md  README.txt
Git_L/: CMakeLists.txt
Git_Learn/: CMakeLists.txt
QA/: 1.4_Шаблон_отчета_об_ошибках_.xlsx  2.3_Шаблон_баг-репорта.xlsx  2.5_Proverka-vvodimyh-dannyh.xlsx
SFML/Example_01/: CMakeLists.txt  main.cpp
SQL/: README.md  homework_vmf0min.sql  mysql.docx  Домашние задания.docx
(+466 files in other folders)
